--- a/admin.html
+++ b/admin.html
@@ -25,8 +25,13 @@
       padding: 20px;
       border-radius: 12px;
       width: 95%;
-      max-width: 500px;
-      text-align: center;
+      max-width: 420px;
+    }
+    h3 { text-align: center; margin-top: 0; }
+    input {
+      width: 100%;
+      padding: 8px;
+      margin-top: 6px;
     }
     button {
       width: 100%;
@@ -37,36 +42,40 @@
       border: none;
       cursor: pointer;
     }
+    .error { color: red; text-align: center; }
     .user {
-      padding: 8px;
+      padding: 6px;
       border-bottom: 1px solid #ddd;
-      text-align: left;
-    }
-    .error {
-      color: red;
-      margin-top: 10px;
     }
   </style>
 </head>
 
 <body>
 
-<div class="card" id="loading">Checking admin access…</div>
+<!-- LOGIN -->
+<div class="card" id="loginCard">
+  <h3>Admin Login</h3>
+  <input id="email" placeholder="Email">
+  <input id="password" type="password">
+  <button onclick="login()">Login</button>
+  <div id="loginError" class="error"></div>
+</div>
 
-<div class="card" id="denied" style="display:none;">
+<!-- ACCESS DENIED -->
+<div class="card" id="deniedCard" style="display:none;">
   <h3>Access Denied</h3>
-  <p>You are not authorized to view this page.</p>
+  <p style="text-align:center;">You are not authorized.</p>
   <button onclick="logout()">Logout</button>
 </div>
 
-<div class="card" id="admin" style="display:none;">
+<!-- ADMIN DASHBOARD -->
+<div class="card" id="adminCard" style="display:none;">
   <h3>Admin Dashboard</h3>
   <div id="users"></div>
   <button onclick="logout()">Logout</button>
 </div>
 
 <script>
-  // 🔒 CHANGE THIS ONLY IF NEEDED
   const SUPER_ADMIN_EMAIL = "riyagupta9872@gmail.com";
 
   const firebaseConfig = {
@@ -80,30 +89,40 @@
   const auth = firebase.auth();
   const db = firebase.firestore();
 
-  const loading = document.getElementById("loading");
-  const denied = document.getElementById("denied");
-  const admin = document.getElementById("admin");
+  const loginCard = document.getElementById("loginCard");
+  const deniedCard = document.getElementById("deniedCard");
+  const adminCard = document.getElementById("adminCard");
   const usersDiv = document.getElementById("users");
 
-  auth.onAuthStateChanged(async user => {
-    loading.style.display = "none";
+  function show(card) {
+    loginCard.style.display = "none";
+    deniedCard.style.display = "none";
+    adminCard.style.display = "none";
+    card.style.display = "block";
+  }
 
+  auth.onAuthStateChanged(user => {
     if (!user) {
-      window.location.href = "./index.html";
+      show(loginCard);
       return;
     }
 
     if (user.email !== SUPER_ADMIN_EMAIL) {
-      denied.style.display = "block";
+      show(deniedCard);
       return;
     }
 
-    admin.style.display = "block";
+    show(adminCard);
     loadUsers();
   });
 
+  function login() {
+    auth.signInWithEmailAndPassword(email.value, password.value)
+      .catch(e => loginError.innerText = e.message);
+  }
+
   async function loadUsers() {
-    usersDiv.innerHTML = "<p>Loading users…</p>";
+    usersDiv.innerHTML = "Loading users…";
     const snap = await db.collection("users").get();
     usersDiv.innerHTML = "";
 
@@ -111,15 +130,16 @@
       const d = doc.data();
       const div = document.createElement("div");
       div.className = "user";
-      div.innerText = `${d.name || "No Name"} — ${d.chantingCategory || "No Category"}`;
+      div.innerText = `${d.name || "No Name"} – ${d.chantingCategory || "-"}`;
       usersDiv.appendChild(div);
     });
   }
 
-  function logout() {
-    auth.signOut().then(() => {
-      window.location.href = "./index.html";
-    });
+  async function logout() {
+    try {
+      await auth.signOut();
+    } catch (e) {}
+    show(loginCard);
   }
 </script>
 
