--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <title>Sadhana Tracker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
@@ -12,162 +11,138 @@
   <style>
     body {
       margin: 0;
-      min-height: 100vh;
-      background: #000080;
       font-family: Arial, sans-serif;
+      background: #000080;
+      min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
     }
+    .container { width: 95%; max-width: 520px; }
     .card {
       background: white;
+      padding: 16px;
+      border-radius: 10px;
+      margin-bottom: 10px;
       color: #000080;
-      padding: 18px;
-      border-radius: 12px;
-      width: 95%;
-      max-width: 420px;
-      box-sizing: border-box;
     }
     h3 { text-align: center; margin-top: 0; }
 
     .tabs {
       display: flex;
-      margin-bottom: 12px;
-      border-radius: 8px;
+      margin-bottom: 10px;
+      border-radius: 10px;
       overflow: hidden;
     }
     .tab {
       flex: 1;
-      text-align: center;
       padding: 10px;
+      text-align: center;
       background: #e6e6e6;
-      cursor: pointer;
       font-weight: bold;
+      cursor: pointer;
     }
     .tab.active {
       background: #000080;
       color: white;
     }
 
-    label { display:block; margin-top:10px; font-size:14px; }
+    label { display:block; margin-top:8px; }
     input, select {
-      width: 100%;
-      padding: 8px;
-      margin-top: 4px;
-      box-sizing: border-box;
+      width:100%;
+      padding:6px;
+      margin-top:4px;
     }
     button {
-      width: 100%;
-      margin-top: 12px;
-      padding: 10px;
-      background: #000080;
-      color: white;
-      border: none;
-      cursor: pointer;
-      font-size: 15px;
+      width:100%;
+      margin-top:10px;
+      padding:8px;
+      background:#000080;
+      color:white;
+      border:none;
+      cursor:pointer;
     }
-    .error { color:#b00000; text-align:center; margin-top:8px; }
-    .success { color:green; text-align:center; margin-top:8px; }
+    .error { color:#b00000; text-align:center; }
+    .success { color:green; text-align:center; }
 
     table {
       width:100%;
-      border-collapse: collapse;
+      border-collapse:collapse;
       font-size:12px;
-      margin-top:8px;
     }
     th, td {
       border:1px solid #ccc;
       padding:4px;
       text-align:center;
     }
-    .weekHeader {
-      margin-top:10px;
+    .week-header {
+      margin-top:8px;
       font-weight:bold;
       cursor:pointer;
-      background:#f2f2f2;
-      padding:6px;
-      border-radius:6px;
     }
   </style>
 </head>
 
 <body>
+<div class="container">
 
-<div class="card" id="loading">Checking session…</div>
+  <div class="card" id="loading">Checking session…</div>
 
-<div class="card" id="auth" style="display:none;">
-  <h3>Login / Sign Up</h3>
-  <input id="email" placeholder="Email">
-  <input id="password" type="password" placeholder="Password">
-  <button onclick="login()">Login</button>
-  <button onclick="signup()">Sign Up</button>
-  <div id="authMsg" class="error"></div>
-</div>
-
-<div class="card" id="profile" style="display:none;">
-  <h3>Profile Setup</h3>
-  <label>Name</label>
-  <input id="name">
-  <label>Chanting Category</label>
-  <select id="category">
-    <option value="">Select</option>
-    <option value="0-4">0–4</option>
-    <option value="5-9">5–9</option>
-    <option value="10-16">10–16</option>
-  </select>
-  <button onclick="saveProfile()">Save Profile</button>
-  <div id="profileMsg" class="error"></div>
-</div>
-
-<div class="card" id="app" style="display:none;">
-
-  <!-- Tabs -->
-  <div class="tabs">
-    <div class="tab active" id="tabSadhana">Sadhana</div>
-    <div class="tab" id="tabReports">Reports</div>
+  <div class="card" id="login" style="display:none;">
+    <h3>Login</h3>
+    <input id="email" placeholder="Email">
+    <input id="password" type="password">
+    <button id="loginBtn">Login</button>
+    <div id="loginError" class="error"></div>
   </div>
 
-  <!-- Sadhana -->
-  <div id="sadhanaSection">
-    <h3>Daily Sadhana</h3>
-
-    <label>Date</label>
-    <select id="date"></select>
-
-    <label>Sleep Time</label>
-    <input type="time" id="sleep">
-
-    <label>Wake Time</label>
-    <input type="time" id="wake">
-
-    <label>Chanting Completion Time</label>
-    <input type="time" id="chant">
-
-    <label>Reading (minutes)</label>
-    <input type="number" id="read">
-
-    <label>Hearing (minutes)</label>
-    <input type="number" id="hear">
-
-    <label>Day Sleep (minutes)</label>
-    <input type="number" id="daysleep">
-
-    <button onclick="submitSadhana()">Submit Sadhana</button>
-    <div id="sadhanaErr" class="error"></div>
-    <div id="sadhanaOk" class="success"></div>
-
-    <button onclick="logout()">Logout</button>
+  <div class="card" id="profile" style="display:none;">
+    <h3>Profile Setup</h3>
+    <label>Name</label>
+    <input id="profileName">
+    <label>Chanting Category</label>
+    <select id="profileCategory">
+      <option value="">Select</option>
+      <option value="0-4">0–4</option>
+      <option value="5-9">5–9</option>
+      <option value="10-16">10–16</option>
+    </select>
+    <button id="saveProfileBtn">Save Profile</button>
+    <div id="profileError" class="error"></div>
   </div>
 
-  <!-- Reports -->
-  <div id="reportsSection" style="display:none;">
-    <h3>Current Week</h3>
-    <div id="currentWeek"></div>
+  <div id="app" style="display:none;">
 
-    <h3>Previous Weeks</h3>
-    <div id="previousWeeks"></div>
+    <div class="tabs">
+      <div class="tab active" id="tabSadhana">Sadhana</div>
+      <div class="tab" id="tabReports">Reports</div>
+    </div>
+
+    <div class="card" id="sadhanaSection">
+      <h3>Daily Sadhana</h3>
+
+      <label>Date</label>
+      <select id="date"></select>
+
+      <label>Sleep</label><input type="time" id="sleep">
+      <label>Wake</label><input type="time" id="wake">
+      <label>Chanting</label><input type="time" id="chant">
+      <label>Reading (min)</label><input type="number" id="read">
+      <label>Hearing (min)</label><input type="number" id="hear">
+      <label>Day Sleep (min)</label><input type="number" id="daysleep">
+
+      <button id="submitBtn">Submit</button>
+      <div id="msgError" class="error"></div>
+      <div id="msgSuccess" class="success"></div>
+      <button id="logoutBtn">Logout</button>
+    </div>
+
+    <div class="card" id="reportsSection" style="display:none;">
+      <h3>Reports</h3>
+      <div id="currentWeek"></div>
+    </div>
+
   </div>
-
 </div>
 
 <script>
@@ -183,187 +158,110 @@
   const db = firebase.firestore();
 
   const loading = document.getElementById("loading");
-  const authBox = document.getElementById("auth");
-  const profileBox = document.getElementById("profile");
-  const appBox = document.getElementById("app");
+  const login = document.getElementById("login");
+  const profile = document.getElementById("profile");
+  const app = document.getElementById("app");
 
-  const tabSadhana = document.getElementById("tabSadhana");
-  const tabReports = document.getElementById("tabReports");
-  const sadhanaSection = document.getElementById("sadhanaSection");
-  const reportsSection = document.getElementById("reportsSection");
+  const profileName = document.getElementById("profileName");
+  const profileCategory = document.getElementById("profileCategory");
+  const profileError = document.getElementById("profileError");
 
-  const currentWeekEl = document.getElementById("currentWeek");
-  const previousWeeksEl = document.getElementById("previousWeeks");
+  let uid;
 
   function hideAll(){
     loading.style.display="none";
-    authBox.style.display="none";
-    profileBox.style.display="none";
-    appBox.style.display="none";
+    login.style.display="none";
+    profile.style.display="none";
+    app.style.display="none";
   }
 
   auth.onAuthStateChanged(async user=>{
     hideAll();
-    if(!user){
-      authBox.style.display="block";
-      return;
-    }
-    const doc = await db.collection("users").doc(user.uid).get();
+    if(!user){ login.style.display="block"; return; }
+
+    uid=user.uid;
+    const doc = await db.collection("users").doc(uid).get();
+
     if(!doc.exists || !doc.data().name || !doc.data().chantingCategory){
-      profileBox.style.display="block";
+      profile.style.display="block";
       return;
     }
+
+    app.style.display="block";
     initDates();
-    appBox.style.display="block";
-    loadReports(); // read-only
   });
 
-  tabSadhana.onclick = () => {
-    tabSadhana.classList.add("active");
-    tabReports.classList.remove("active");
-    sadhanaSection.style.display="block";
-    reportsSection.style.display="none";
+  document.getElementById("loginBtn").onclick = ()=>{
+    auth.signInWithEmailAndPassword(
+      email.value,
+      password.value
+    ).catch(e=>{
+      document.getElementById("loginError").innerText=e.message;
+    });
   };
 
-  tabReports.onclick = () => {
-    tabReports.classList.add("active");
-    tabSadhana.classList.remove("active");
-    sadhanaSection.style.display="none";
-    reportsSection.style.display="block";
-  };
-
-  function login(){
-    auth.signInWithEmailAndPassword(email.value, password.value)
-      .catch(e => authMsg.innerText = e.message);
-  }
-
-  function signup(){
-    auth.createUserWithEmailAndPassword(email.value, password.value)
-      .catch(e => authMsg.innerText = e.message);
-  }
-
-  function logout(){
-    auth.signOut();
-  }
-
-  async function saveProfile(){
-    if(!name.value || !category.value){
-      profileMsg.innerText="All fields required";
+  document.getElementById("saveProfileBtn").onclick = async ()=>{
+    if(!profileName.value || !profileCategory.value){
+      profileError.innerText="All fields mandatory";
       return;
     }
-    await db.collection("users").doc(auth.currentUser.uid).set({
-      name: name.value,
-      chantingCategory: category.value
+    await db.collection("users").doc(uid).set({
+      name: profileName.value,
+      chantingCategory: profileCategory.value,
+      createdAt: new Date()
     });
-  }
+    profile.style.display="none";
+    app.style.display="block";
+    initDates();
+  };
 
   function initDates(){
     date.innerHTML="";
-    const today = new Date();
+    const t=new Date();
     for(let i=0;i<3;i++){
-      const d = new Date(today);
-      d.setDate(today.getDate()-i);
-      const v = d.toISOString().slice(0,10);
-      const o = document.createElement("option");
-      o.value=v;
-      o.textContent=v;
+      const d=new Date(t);
+      d.setDate(t.getDate()-i);
+      const o=document.createElement("option");
+      o.value=d.toISOString().slice(0,10);
+      o.textContent=o.value;
       date.appendChild(o);
     }
   }
 
-  async function submitSadhana(){
-    sadhanaErr.innerText="";
-    sadhanaOk.innerText="";
+  document.getElementById("submitBtn").onclick = async ()=>{
     const fields=[sleep,wake,chant,read,hear,daysleep];
-    if(fields.some(f=>f.value==="")){
-      sadhanaErr.innerText="All fields are compulsory";
+    if(fields.some(f=>!f.value)){
+      msgError.innerText="All fields compulsory";
       return;
     }
-    await db.collection("users")
-      .doc(auth.currentUser.uid)
-      .collection("sadhana")
-      .doc(date.value)
+    await db.collection("users").doc(uid)
+      .collection("sadhana").doc(date.value)
       .set({
-        sleepTime:sleep.value,
-        wakeTime:wake.value,
-        chantingTime:chant.value,
-        reading:read.value,
-        hearing:hear.value,
-        daySleep:daysleep.value,
-        createdAt: new Date()
+        sleep:sleep.value,
+        wake:wake.value,
+        chant:chant.value,
+        read:read.value,
+        hear:hear.value,
+        daysleep:daysleep.value
       });
-    sadhanaOk.innerText="Sadhana submitted successfully 🙏";
+    msgSuccess.innerText="Sadhana submitted successfully 🙏";
     fields.forEach(f=>f.value="");
-    loadReports();
-  }
+  };
 
-  // ===== REPORTS (READ-ONLY) =====
-  function startOfWeek(d){
-    const x = new Date(d);
-    x.setDate(x.getDate() - x.getDay());
-    x.setHours(0,0,0,0);
-    return x;
-  }
+  document.getElementById("logoutBtn").onclick=()=>auth.signOut();
 
-  async function loadReports(){
-    currentWeekEl.innerHTML = "Loading…";
-    previousWeeksEl.innerHTML = "";
-
-    const snap = await db.collection("users")
-      .doc(auth.currentUser.uid)
-      .collection("sadhana")
-      .get();
-
-    const byWeek = {};
-    snap.forEach(doc=>{
-      const day = new Date(doc.id);
-      if (isNaN(day)) return;
-      const w = startOfWeek(day).toISOString().slice(0,10);
-      byWeek[w] = byWeek[w] || [];
-      byWeek[w].push({ date: doc.id, ...doc.data() });
-    });
-
-    const weeks = Object.keys(byWeek).sort().reverse();
-    renderWeek(currentWeekEl, byWeek[weeks[0]] || []);
-
-    weeks.slice(1).forEach(w=>{
-      const block = document.createElement("div");
-      const header = document.createElement("div");
-      const body = document.createElement("div");
-      header.className="weekHeader";
-      header.textContent = w;
-      body.style.display="none";
-      header.onclick=()=> {
-        body.style.display = body.style.display==="none" ? "block" : "none";
-      };
-      block.appendChild(header);
-      block.appendChild(body);
-      previousWeeksEl.appendChild(block);
-      renderWeek(body, byWeek[w]);
-    });
-  }
-
-  function renderWeek(el, rows){
-    if(!rows.length){
-      el.innerHTML = "No data";
-      return;
-    }
-    rows.sort((a,b)=>a.date.localeCompare(b.date));
-    let h = "<table><tr><th>Date</th><th>Sleep</th><th>Wake</th><th>Chant</th><th>Read</th><th>Hear</th><th>Day Sleep</th></tr>";
-    rows.forEach(r=>{
-      h += `<tr>
-        <td>${r.date}</td>
-        <td>${r.sleepTime}</td>
-        <td>${r.wakeTime}</td>
-        <td>${r.chantingTime}</td>
-        <td>${r.reading}</td>
-        <td>${r.hearing}</td>
-        <td>${r.daySleep}</td>
-      </tr>`;
-    });
-    el.innerHTML = h + "</table>";
-  }
+  tabSadhana.onclick=()=>{
+    sadhanaSection.style.display="block";
+    reportsSection.style.display="none";
+    tabSadhana.classList.add("active");
+    tabReports.classList.remove("active");
+  };
+  tabReports.onclick=()=>{
+    sadhanaSection.style.display="none";
+    reportsSection.style.display="block";
+    tabReports.classList.add("active");
+    tabSadhana.classList.remove("active");
+  };
 </script>
-
 </body>
 </html>
